// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddTechnicalReq.vue renders props when passed 1`] = `
<div
  class="mx-auto v-card v-sheet theme--light"
  style="max-width: 80%;"
>
  <div
    class="mx-auto v-card v-sheet theme--light"
  >
    <header
      class="bc-subtitle v-sheet v-sheet--tile theme--dark v-toolbar v-app-bar"
      style="height: 64px; margin-top: 0px; transform: translateY(0px); left: 0px; right: 0px;"
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <button
          aria-label="Back Button"
          class="v-btn v-btn--flat v-btn--icon v-btn--round theme--dark v-size--default"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-arrow-left theme--dark"
            />
          </span>
        </button>
         
        <div
          class="v-toolbar__title"
        >
          
        </div>
         
        <div
          class="spacer"
        />
      </div>
    </header>
     
    <form
      class="v-form pa-4 pt-6"
      novalidate="novalidate"
    >
      <div
        class="container"
      >
        <div
          class="row row--dense"
        >
          <div
            class="col-md-12 col-12"
          >
            <div
              class="pa-4 pt-6 mb-4 v-card v-sheet theme--light"
            >
              <div
                class="v-card__title headline bc-padding-left-0 text-capitalize"
              >
                
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                
              </div>
            </div>
             
            <div
              class="pa-4 pt-6 v-card v-sheet theme--light"
            >
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                
              </div>
               
              <div
                class="v-input input theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                rules="v => !!v || 'This field is required',v => {
    if (v === '') {
      return true;
    } else {
      return /^(?:http(s)?:\\\\/\\\\/)?[\\\\w.-]+(?:\\\\.[\\\\w\\\\.-]+)+[\\\\w\\\\-\\\\._~:/?#[\\\\]@!\\\\$&'\\\\(\\\\)\\\\*\\\\+,;=.]+$/.test(v) || ' must be valid URL';
    }
  },v => (v || '').length <= len || 'Invalid character length, max length ' + len"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <fieldset
                      aria-hidden="true"
                    >
                      <legend
                        style="width: 0px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                    <div
                      class="v-text-field__slot"
                    >
                      <input
                        id="input-14"
                        type="text"
                      />
                    </div>
                  </div>
                  <div
                    class="v-text-field__details"
                  >
                    <div
                      class="v-messages theme--light"
                    >
                      <span
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                    <div
                      class="v-counter theme--light"
                    >
                      0 / 500
                    </div>
                  </div>
                </div>
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                
              </div>
               
              <div
                class="v-input addUri theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <fieldset
                      aria-hidden="true"
                    >
                      <legend
                        style="width: 0px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                    <div
                      class="v-text-field__slot"
                    >
                      <input
                        id="input-17"
                        type="text"
                      />
                    </div>
                  </div>
                  <div
                    class="v-text-field__details"
                  >
                    <div
                      class="v-messages theme--light"
                    >
                      <span
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                  </div>
                </div>
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                
              </div>
               
              <div
                class="v-input input pt-6 theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                rules="v => !!v || 'This field is required',v => {
    if (v === '') {
      return true;
    } else {
      return /^(?:http(s)?:\\\\/\\\\/)?[\\\\w.-]+(?:\\\\.[\\\\w\\\\.-]+)+[\\\\w\\\\-\\\\._~:/?#[\\\\]@!\\\\$&'\\\\(\\\\)\\\\*\\\\+,;=.]+$/.test(v) || ' must be valid URL';
    }
  },v => (v || '').length <= len || 'Invalid character length, max length ' + len"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <fieldset
                      aria-hidden="true"
                    >
                      <legend
                        style="width: 0px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                    <div
                      class="v-text-field__slot"
                    >
                      <input
                        id="input-21"
                        type="text"
                      />
                    </div>
                  </div>
                  <div
                    class="v-text-field__details"
                  >
                    <div
                      class="v-messages theme--light"
                    >
                      <span
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                    <div
                      class="v-counter theme--light"
                    >
                      0 / 500
                    </div>
                  </div>
                </div>
              </div>
               
              <div
                class="row"
              >
                <div
                  class="col-5"
                >
                  <div
                    class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select"
                    outlined=""
                    rules="v => !!v || 'This field is required'"
                    value="RS256"
                  >
                    <div
                      class="v-input__control"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-owns="list-25"
                        class="v-input__slot"
                        role="button"
                      >
                        <fieldset
                          aria-hidden="true"
                        >
                          <legend
                            style="width: 0px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <div
                          class="v-select__slot"
                        >
                          <div
                            class="v-select__selections"
                          >
                            <div
                              class="v-select__selection v-select__selection--comma"
                            >
                              RS256
                            </div>
                            <input
                              aria-readonly="true"
                              autocomplete="off"
                              id="input-25"
                              readonly="readonly"
                              type="text"
                            />
                          </div>
                          <div
                            class="v-input__append-inner"
                          >
                            <div
                              class="v-input__icon v-input__icon--append"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon notranslate mdi mdi-menu-down theme--light"
                              />
                            </div>
                          </div>
                          <input
                            type="hidden"
                            value="RS256"
                          />
                        </div>
                        <div
                          class="v-menu"
                        >
                          <div
                            class="v-menu__content theme--light "
                            style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                          />
                        </div>
                      </div>
                      <div
                        class="v-text-field__details"
                      >
                        <div
                          class="v-messages theme--light"
                        >
                          <span
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                 
                <div
                  class="spacer"
                />
                 
                <div
                  class="col-5"
                >
                  <div
                    class="v-input col-6 v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select"
                    outlined=""
                    rules="v => !!v || 'This field is required'"
                    value="RS256"
                  >
                    <div
                      class="v-input__control"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-owns="list-33"
                        class="v-input__slot"
                        role="button"
                      >
                        <fieldset
                          aria-hidden="true"
                        >
                          <legend
                            style="width: 0px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <div
                          class="v-select__slot"
                        >
                          <div
                            class="v-select__selections"
                          >
                            <div
                              class="v-select__selection v-select__selection--comma"
                            >
                              RS256
                            </div>
                            <input
                              aria-readonly="true"
                              autocomplete="off"
                              id="input-33"
                              readonly="readonly"
                              type="text"
                            />
                          </div>
                          <div
                            class="v-input__append-inner"
                          >
                            <div
                              class="v-input__icon v-input__icon--append"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon notranslate mdi mdi-menu-down theme--light"
                              />
                            </div>
                          </div>
                          <input
                            type="hidden"
                            value="RS256"
                          />
                        </div>
                        <div
                          class="v-menu"
                        >
                          <div
                            class="v-menu__content theme--light "
                            style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                          />
                        </div>
                      </div>
                      <div
                        class="v-text-field__details"
                      >
                        <div
                          class="v-messages theme--light"
                        >
                          <span
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
               
              <hr
                aria-orientation="horizontal"
                class="v-divider theme--light"
                role="separator"
              />
               
              <div
                class="v-card__actions"
              >
                <div
                  class="spacer"
                />
                 
                <button
                  aria-label="Back Button"
                  class="btn v-btn v-btn--contained theme--light v-size--default secondary normal"
                  name="button"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    
                  </span>
                </button>
                 
                <button
                  aria-disabled="true"
                  class="btn white--text submit-req ml-6 v-btn v-btn--depressed theme--light v-size--default primary normal disabled"
                  depressed=""
                  name="button"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`AddTechnicalReq.vue renders props when passed 2`] = `
<div
  class="mx-auto v-card v-sheet theme--light"
  style="max-width: 80%;"
>
  <div
    class="mx-auto v-card v-sheet theme--light"
  >
    <header
      class="bc-subtitle v-sheet v-sheet--tile theme--dark v-toolbar v-app-bar"
      style="height: 64px; margin-top: 0px; transform: translateY(0px); left: 0px; right: 0px;"
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <button
          aria-label="Back Button"
          class="v-btn v-btn--flat v-btn--icon v-btn--round theme--dark v-size--default"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-arrow-left theme--dark"
            />
          </span>
        </button>
         
        <div
          class="v-toolbar__title"
        >
          
        </div>
         
        <div
          class="spacer"
        />
      </div>
    </header>
     
    <form
      class="v-form pa-4 pt-6"
      novalidate="novalidate"
    >
      <div
        class="container"
      >
        <div
          class="row row--dense"
        >
          <div
            class="col-md-12 col-12"
          >
            <div
              class="pa-4 pt-6 mb-4 v-card v-sheet theme--light"
            >
              <div
                class="v-card__title headline bc-padding-left-0 text-capitalize"
              >
                
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                
              </div>
            </div>
             
            <div
              class="pa-4 pt-6 v-card v-sheet theme--light"
            >
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                
              </div>
               
              <div
                class="v-input input theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                rules="v => !!v || 'This field is required',v => {
    if (v === '') {
      return true;
    } else {
      return /^(?:http(s)?:\\\\/\\\\/)?[\\\\w.-]+(?:\\\\.[\\\\w\\\\.-]+)+[\\\\w\\\\-\\\\._~:/?#[\\\\]@!\\\\$&'\\\\(\\\\)\\\\*\\\\+,;=.]+$/.test(v) || ' must be valid URL';
    }
  },v => (v || '').length <= len || 'Invalid character length, max length ' + len"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <fieldset
                      aria-hidden="true"
                    >
                      <legend
                        style="width: 0px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                    <div
                      class="v-text-field__slot"
                    >
                      <input
                        id="input-57"
                        type="text"
                      />
                    </div>
                  </div>
                  <div
                    class="v-text-field__details"
                  >
                    <div
                      class="v-messages theme--light"
                    >
                      <span
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                    <div
                      class="v-counter theme--light"
                    >
                      0 / 500
                    </div>
                  </div>
                </div>
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                
              </div>
               
              <div
                class="v-input addUri theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <fieldset
                      aria-hidden="true"
                    >
                      <legend
                        style="width: 0px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                    <div
                      class="v-text-field__slot"
                    >
                      <input
                        id="input-60"
                        type="text"
                      />
                    </div>
                  </div>
                  <div
                    class="v-text-field__details"
                  >
                    <div
                      class="v-messages theme--light"
                    >
                      <span
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                  </div>
                </div>
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                
              </div>
               
              <div
                class="v-input input pt-6 theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                rules="v => !!v || 'This field is required',v => {
    if (v === '') {
      return true;
    } else {
      return /^(?:http(s)?:\\\\/\\\\/)?[\\\\w.-]+(?:\\\\.[\\\\w\\\\.-]+)+[\\\\w\\\\-\\\\._~:/?#[\\\\]@!\\\\$&'\\\\(\\\\)\\\\*\\\\+,;=.]+$/.test(v) || ' must be valid URL';
    }
  },v => (v || '').length <= len || 'Invalid character length, max length ' + len"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <fieldset
                      aria-hidden="true"
                    >
                      <legend
                        style="width: 0px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                    <div
                      class="v-text-field__slot"
                    >
                      <input
                        id="input-64"
                        type="text"
                      />
                    </div>
                  </div>
                  <div
                    class="v-text-field__details"
                  >
                    <div
                      class="v-messages theme--light"
                    >
                      <span
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                    <div
                      class="v-counter theme--light"
                    >
                      0 / 500
                    </div>
                  </div>
                </div>
              </div>
               
              <div
                class="row"
              >
                <div
                  class="col-5"
                >
                  <div
                    class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select"
                    outlined=""
                    rules="v => !!v || 'This field is required'"
                    value="RS256"
                  >
                    <div
                      class="v-input__control"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-owns="list-68"
                        class="v-input__slot"
                        role="button"
                      >
                        <fieldset
                          aria-hidden="true"
                        >
                          <legend
                            style="width: 0px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <div
                          class="v-select__slot"
                        >
                          <div
                            class="v-select__selections"
                          >
                            <div
                              class="v-select__selection v-select__selection--comma"
                            >
                              RS256
                            </div>
                            <input
                              aria-readonly="true"
                              autocomplete="off"
                              id="input-68"
                              readonly="readonly"
                              type="text"
                            />
                          </div>
                          <div
                            class="v-input__append-inner"
                          >
                            <div
                              class="v-input__icon v-input__icon--append"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon notranslate mdi mdi-menu-down theme--light"
                              />
                            </div>
                          </div>
                          <input
                            type="hidden"
                            value="RS256"
                          />
                        </div>
                        <div
                          class="v-menu"
                        >
                          <div
                            class="v-menu__content theme--light "
                            style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                          />
                        </div>
                      </div>
                      <div
                        class="v-text-field__details"
                      >
                        <div
                          class="v-messages theme--light"
                        >
                          <span
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                 
                <div
                  class="spacer"
                />
                 
                <div
                  class="col-5"
                >
                  <div
                    class="v-input col-6 v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select"
                    outlined=""
                    rules="v => !!v || 'This field is required'"
                    value="RS256"
                  >
                    <div
                      class="v-input__control"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-owns="list-76"
                        class="v-input__slot"
                        role="button"
                      >
                        <fieldset
                          aria-hidden="true"
                        >
                          <legend
                            style="width: 0px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <div
                          class="v-select__slot"
                        >
                          <div
                            class="v-select__selections"
                          >
                            <div
                              class="v-select__selection v-select__selection--comma"
                            >
                              RS256
                            </div>
                            <input
                              aria-readonly="true"
                              autocomplete="off"
                              id="input-76"
                              readonly="readonly"
                              type="text"
                            />
                          </div>
                          <div
                            class="v-input__append-inner"
                          >
                            <div
                              class="v-input__icon v-input__icon--append"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon notranslate mdi mdi-menu-down theme--light"
                              />
                            </div>
                          </div>
                          <input
                            type="hidden"
                            value="RS256"
                          />
                        </div>
                        <div
                          class="v-menu"
                        >
                          <div
                            class="v-menu__content theme--light "
                            style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                          />
                        </div>
                      </div>
                      <div
                        class="v-text-field__details"
                      >
                        <div
                          class="v-messages theme--light"
                        >
                          <span
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
               
              <hr
                aria-orientation="horizontal"
                class="v-divider theme--light"
                role="separator"
              />
               
              <div
                class="v-card__actions"
              >
                <div
                  class="spacer"
                />
                 
                <button
                  aria-label="Back Button"
                  class="btn v-btn v-btn--contained theme--light v-size--default secondary normal"
                  name="button"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    
                  </span>
                </button>
                 
                <button
                  aria-disabled="true"
                  class="btn white--text submit-req ml-6 v-btn v-btn--depressed theme--light v-size--default primary normal disabled"
                  depressed=""
                  name="button"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`AddTechnicalReq.vue submit form on onlick  1`] = `
<div
  class="mx-auto v-card v-sheet theme--light"
  style="max-width: 80%;"
>
  <div
    class="mx-auto v-card v-sheet theme--light"
  >
    <header
      class="bc-subtitle v-sheet v-sheet--tile theme--dark v-toolbar v-app-bar"
      style="height: 64px; margin-top: 0px; transform: translateY(0px); left: 0px; right: 0px;"
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <button
          aria-label="Back Button"
          class="v-btn v-btn--flat v-btn--icon v-btn--round theme--dark v-size--default"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-arrow-left theme--dark"
            />
          </span>
        </button>
         
        <div
          class="v-toolbar__title"
        >
          
        </div>
         
        <div
          class="spacer"
        />
      </div>
    </header>
     
    <form
      class="v-form pa-4 pt-6"
      novalidate="novalidate"
    >
      <div
        class="container"
      >
        <div
          class="row row--dense"
        >
          <div
            class="col-md-12 col-12"
          >
            <div
              class="pa-4 pt-6 mb-4 v-card v-sheet theme--light"
            >
              <div
                class="v-card__title headline bc-padding-left-0 text-capitalize"
              >
                
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                
              </div>
            </div>
             
            <div
              class="pa-4 pt-6 v-card v-sheet theme--light"
            >
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                
              </div>
               
              <div
                class="v-input input theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                rules="v => !!v || 'This field is required',v => {
    if (v === '') {
      return true;
    } else {
      return /^(?:http(s)?:\\\\/\\\\/)?[\\\\w.-]+(?:\\\\.[\\\\w\\\\.-]+)+[\\\\w\\\\-\\\\._~:/?#[\\\\]@!\\\\$&'\\\\(\\\\)\\\\*\\\\+,;=.]+$/.test(v) || ' must be valid URL';
    }
  },v => (v || '').length <= len || 'Invalid character length, max length ' + len"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <fieldset
                      aria-hidden="true"
                    >
                      <legend
                        style="width: 0px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                    <div
                      class="v-text-field__slot"
                    >
                      <input
                        id="input-100"
                        type="text"
                      />
                    </div>
                  </div>
                  <div
                    class="v-text-field__details"
                  >
                    <div
                      class="v-messages theme--light"
                    >
                      <span
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                    <div
                      class="v-counter theme--light"
                    >
                      0 / 500
                    </div>
                  </div>
                </div>
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                
              </div>
               
              <div
                class="v-input addUri theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <fieldset
                      aria-hidden="true"
                    >
                      <legend
                        style="width: 0px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                    <div
                      class="v-text-field__slot"
                    >
                      <input
                        id="input-103"
                        type="text"
                      />
                    </div>
                  </div>
                  <div
                    class="v-text-field__details"
                  >
                    <div
                      class="v-messages theme--light"
                    >
                      <span
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                  </div>
                </div>
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                
              </div>
               
              <div
                class="v-input input pt-6 theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                rules="v => !!v || 'This field is required',v => {
    if (v === '') {
      return true;
    } else {
      return /^(?:http(s)?:\\\\/\\\\/)?[\\\\w.-]+(?:\\\\.[\\\\w\\\\.-]+)+[\\\\w\\\\-\\\\._~:/?#[\\\\]@!\\\\$&'\\\\(\\\\)\\\\*\\\\+,;=.]+$/.test(v) || ' must be valid URL';
    }
  },v => (v || '').length <= len || 'Invalid character length, max length ' + len"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <fieldset
                      aria-hidden="true"
                    >
                      <legend
                        style="width: 0px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                    <div
                      class="v-text-field__slot"
                    >
                      <input
                        id="input-107"
                        type="text"
                      />
                    </div>
                  </div>
                  <div
                    class="v-text-field__details"
                  >
                    <div
                      class="v-messages theme--light"
                    >
                      <span
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                    <div
                      class="v-counter theme--light"
                    >
                      0 / 500
                    </div>
                  </div>
                </div>
              </div>
               
              <div
                class="row"
              >
                <div
                  class="col-5"
                >
                  <div
                    class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select"
                    outlined=""
                    rules="v => !!v || 'This field is required'"
                    value="RS256"
                  >
                    <div
                      class="v-input__control"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-owns="list-111"
                        class="v-input__slot"
                        role="button"
                      >
                        <fieldset
                          aria-hidden="true"
                        >
                          <legend
                            style="width: 0px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <div
                          class="v-select__slot"
                        >
                          <div
                            class="v-select__selections"
                          >
                            <div
                              class="v-select__selection v-select__selection--comma"
                            >
                              RS256
                            </div>
                            <input
                              aria-readonly="true"
                              autocomplete="off"
                              id="input-111"
                              readonly="readonly"
                              type="text"
                            />
                          </div>
                          <div
                            class="v-input__append-inner"
                          >
                            <div
                              class="v-input__icon v-input__icon--append"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon notranslate mdi mdi-menu-down theme--light"
                              />
                            </div>
                          </div>
                          <input
                            type="hidden"
                            value="RS256"
                          />
                        </div>
                        <div
                          class="v-menu"
                        >
                          <div
                            class="v-menu__content theme--light "
                            style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                          />
                        </div>
                      </div>
                      <div
                        class="v-text-field__details"
                      >
                        <div
                          class="v-messages theme--light"
                        >
                          <span
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                 
                <div
                  class="spacer"
                />
                 
                <div
                  class="col-5"
                >
                  <div
                    class="v-input col-6 v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select"
                    outlined=""
                    rules="v => !!v || 'This field is required'"
                    value="RS256"
                  >
                    <div
                      class="v-input__control"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-owns="list-119"
                        class="v-input__slot"
                        role="button"
                      >
                        <fieldset
                          aria-hidden="true"
                        >
                          <legend
                            style="width: 0px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <div
                          class="v-select__slot"
                        >
                          <div
                            class="v-select__selections"
                          >
                            <div
                              class="v-select__selection v-select__selection--comma"
                            >
                              RS256
                            </div>
                            <input
                              aria-readonly="true"
                              autocomplete="off"
                              id="input-119"
                              readonly="readonly"
                              type="text"
                            />
                          </div>
                          <div
                            class="v-input__append-inner"
                          >
                            <div
                              class="v-input__icon v-input__icon--append"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon notranslate mdi mdi-menu-down theme--light"
                              />
                            </div>
                          </div>
                          <input
                            type="hidden"
                            value="RS256"
                          />
                        </div>
                        <div
                          class="v-menu"
                        >
                          <div
                            class="v-menu__content theme--light "
                            style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                          />
                        </div>
                      </div>
                      <div
                        class="v-text-field__details"
                      >
                        <div
                          class="v-messages theme--light"
                        >
                          <span
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
               
              <hr
                aria-orientation="horizontal"
                class="v-divider theme--light"
                role="separator"
              />
               
              <div
                class="v-card__actions"
              >
                <div
                  class="spacer"
                />
                 
                <button
                  aria-label="Back Button"
                  class="btn v-btn v-btn--contained theme--light v-size--default secondary normal"
                  name="button"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    
                  </span>
                </button>
                 
                <button
                  aria-disabled="true"
                  class="btn white--text submit-req ml-6 v-btn v-btn--depressed theme--light v-size--default primary normal disabled"
                  depressed=""
                  name="button"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
